# scientific-file-format-data-analyzer

./: README.md  main.py  pyproject.toml
data_repositories/: __init__.py  data_gov.py  data_repository.py  ess_dive.py  hugging_face.py  ieee_dataport.py
data_repositories/checkpoints/: ESSDiveDataRepository_checkpoint_page_1017.json  ESSDiveDataRepository_checkpoint_page_1047.json  ESSDiveDataRepository_checkpoint_page_1077.json  ESSDiveDataRepository_checkpoint_page_1107.json  ESSDiveDataRepository_checkpoint_page_1137.json  ESSDiveDataRepository_checkpoint_page_1167.json  ESSDiveDataRepository_checkpoint_page_1197.json  ESSDiveDataRepository_checkpoint_page_120.json  ESSDiveDataRepository_checkpoint_page_1227.json  ESSDiveDataRepository_checkpoint_page_1257.json  ESSDiveDataRepository_checkpoint_page_1287.json  ESSDiveDataRepository_checkpoint_page_1317.json  ESSDiveDataRepository_checkpoint_page_1347.json  ESSDiveDataRepository_checkpoint_page_150.json  ESSDiveDataRepository_checkpoint_page_180.json  ESSDiveDataRepository_checkpoint_page_210.json  ESSDiveDataRepository_checkpoint_page_240.json  ESSDiveDataRepository_checkpoint_page_270.json  ESSDiveDataRepository_checkpoint_page_30.json  ESSDiveDataRepository_checkpoint_page_300.json  ESSDiveDataRepository_checkpoint_page_330.json  ESSDiveDataRepository_checkpoint_page_360.json  ESSDiveDataRepository_checkpoint_page_390.json  ESSDiveDataRepository_checkpoint_page_420.json  ESSDiveDataRepository_checkpoint_page_450.json  ESSDiveDataRepository_checkpoint_page_480.json  ESSDiveDataRepository_checkpoint_page_510.json  (+73 more)
(+8 files in other folders)
